--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -138,6 +138,19 @@
         android:id="@+id/listaAlertaFragment"
         android:name="ipg.primeiro.projetofinalcovid.ListaAlertaFragment"
         android:label="@string/titulo_lista_alerta"
-        tools:layout="@layout/fragment_lista_alerta" />
+        tools:layout="@layout/fragment_lista_alerta" >
+        <action
+            android:id="@+id/action_listaAlertaFragment_to_novoAlertaFragment"
+            app:destination="@id/novoAlertaFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/novoAlertaFragment"
+        android:name="ipg.primeiro.projetofinalcovid.NovoAlertaFragment"
+        android:label="@string/titutlo_novo_alerta"
+        tools:layout="@layout/fragment_novo_alerta">
+        <action
+            android:id="@+id/action_novoAlertaFragment_to_listaAlertaFragment"
+            app:destination="@id/listaAlertaFragment" />
+    </fragment>
 
 </navigation>
