--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -145,6 +145,9 @@
         <action
             android:id="@+id/action_listaAlertaFragment_to_editaAlertaFragment"
             app:destination="@id/editaAlertaFragment" />
+        <action
+            android:id="@+id/action_listaAlertaFragment_to_eliminaAlertaFragment"
+            app:destination="@id/eliminaAlertaFragment" />
     </fragment>
     <fragment
         android:id="@+id/novoAlertaFragment"
@@ -162,6 +165,15 @@
         tools:layout="@layout/fragment_edita_alerta">
         <action
             android:id="@+id/action_editaAlertaFragment_to_listaAlertaFragment"
+            app:destination="@id/listaAlertaFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/eliminaAlertaFragment"
+        android:name="ipg.primeiro.projetofinalcovid.EliminaAlertaFragment"
+        android:label="fragment_elimina_alerta"
+        tools:layout="@layout/fragment_elimina_alerta" >
+        <action
+            android:id="@+id/action_eliminaAlertaFragment_to_listaAlertaFragment"
             app:destination="@id/listaAlertaFragment" />
     </fragment>
 
