--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -176,5 +176,10 @@
             android:id="@+id/action_eliminaAlertaFragment_to_listaAlertaFragment"
             app:destination="@id/listaAlertaFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/listaNotificacaoFragment"
+        android:name="ipg.primeiro.projetofinalcovid.ListaNotificacaoFragment"
+        android:label="@string/titulo_lista_notificacao"
+        tools:layout="@layout/fragment_lista_notificacao" />
 
 </navigation>
