--- a/app/src/main/res/layout/fragment_elimina_notificacao.xml
+++ b/app/src/main/res/layout/fragment_elimina_notificacao.xml
@@ -70,7 +70,7 @@
         android:textColor="@color/cor_destaque" />
 
     <TextView
-        android:id="@+id/textViewDataNascimento"
+        android:id="@+id/textViewResultado"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_ecran"
