Criado menu pesquisar

--- a/app/src/main/res/layout/fragment_elimina_notificacao.xml
+++ b/app/src/main/res/layout/fragment_elimina_notificacao.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="@dimen/margin_ecran"
         android:layout_marginEnd="@dimen/margin_ecran"
         android:layout_marginRight="@dimen/margin_ecran"
-        android:text="@string/nome"
+        android:text="@string/estado_sa_de"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/cor_destaque" />
 
@@ -28,7 +28,7 @@
         android:layout_marginTop="@dimen/margin_ecran"
         android:layout_marginEnd="@dimen/margin_ecran"
         android:layout_marginRight="@dimen/margin_ecran"
-        tools:text="@string/carlos_cruz"
+        tools:text="Bom"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <TextView
